--- a/.gitignore
+++ b/.gitignore
@@ -93,7 +93,6 @@ build/Release
 # Dependency directories
 node_modules/
 .sass-cache/
-package-lock.json
 jspm_packages/
 
 # Typescript v1 declaration files
@@ -119,3 +118,7 @@ typings/
 
 # next.js build output
 .next
+
+package-lock.json
+*.map
+**/scss/*.css
