--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.0.0",
     "jquery": "^3.3.1",
     "lodash": "^4.17.5",
+    "npm": "^5.8.0",
     "popper.js": "^1.14.1"
   },
   "devDependencies": {
